Tables sorting based on some properties

--- a/partials/main.html
+++ b/partials/main.html
@@ -1,3 +1,66 @@
-<div ng-init="init()">
+<div class="container" ng-init="init()" ng-controller="HomeCtrl">
+
+    <div class="alert alert-info">
+    <p>Sort Type: {{ sortType }}</p>
+    <p>Sort Reverse: {{ sortReverse }}</p>
+    <p>Search Query: {{ searchPlayer }}</p>
+  </div>
+
+    <form>
+        <div class="form-group">
+            <div class="input-group">
+            <div class="input-group-addon"><i class="fa fa-search"></i></div>
+            <input type="text" class="form-control" placeholder="Search" ng-model="searchPlayer">
+            </div>
+        </div>
+    </form>
+
+    <table class="table table-bordered table-striped">
+        <thead>
+            <tr>
+                <td>
+                    <a href="#!/" ng-click="sortType = 'name'; sortReverse = !sortReverse">
+                        Name
+                        <span ng-show="sortType == 'name'" class="fa fa-caret-down"></span>
+                    </a>
+                </td>
+                <td>
+                    <a href="#!/" ng-click="sortType = 'cohort'; sortReverse = !sortReverse">
+                        Cohort
+                        <span ng-show="sortType == 'cohort'" class="fa fa-caret-down"></span>
+                    </a>
+                </td>
+                <td>
+                    <a href="#!/" ng-click="sortType = 'games'; sortReverse = !sortReverse">
+                        Games
+                        <span ng-show="sortType == 'cohort'" class="fa fa-caret-down"></span>
+                    </a>
+                </td>
+                <td>
+                    <a href="#!/" ng-click="sortType = 'wins'; sortReverse = !sortReverse">
+                        Wins
+                        <span ng-show="sortType == 'wins'" class="fa fa-caret-down"></span>
+                    </a>
+                </td>
+                <td>
+                    <a href="#!/" ng-click="sortType = 'losses'; sortReverse = !sortReverse">
+                        Losses
+                        <span ng-show="sortType == 'losses'" class="fa fa-caret-down"></span>
+                    </a>
+                </td>
+            </tr>
+        </thead>
+
+        <tbody>
+        <tr ng-repeat="p in playersArray | orderBy:orderByFunction:sortReverse | filter:searchPlayer">
+            <td>{{ p.lastName}}, {{ p.firstName }}</td>
+            <td>{{ p.cohort }}</td>
+            <td>{{ p.stats.games }}</td>
+            <td>{{ p.stats.wins }}</td>
+            <td>{{ p.stats.losses }}</td>
+        </tr>
+        </tbody>
+
+    </table>
 
 </div>
