--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,24 @@
-$primary-color: red;
+$color-primary-0: #BF0E00;  // Main Primary Red */
+$color-primary-1: #FF1300;
+$color-primary-2: #E71100;
+$color-primary-3: #980B00;
+$color-primary-4: #680800;
+
+$color-secondary-0: #016775;  // Main Secondary Blue (1) */
+$color-secondary-1: #03A0B6;
+$color-secondary-2: #027C8D;
+$color-secondary-3: #01515D;
+$color-secondary-4: #003840;
+
+$color-tertiary-0: #6FB100;  // Main Secondary Green */
+$color-tertiary-1: #98F100;
+$color-tertiary-2: #87D600;
+$color-tertiary-3: #598C00;
+$color-tertiary-2-4: #3D6100;
+
+$black0: #000000;  // Blacks and Greys */
+$grey: #7F7E7E;
+$darker-grey: #464646;
 
 body {
     margin-top: 60px;
