--- a/partials/player-detail.html
+++ b/partials/player-detail.html
@@ -3,6 +3,8 @@
 <h3>{{player.firstName}} {{player.lastName}}</h3>
 <h5>Cohort {{player.cohort}}</h5>
 
+<h2>What up just whatup</h2>
+
 <canvas id="radar" class="chart chart-radar"
   chart-data="data" chart-options="options" chart-colors="colors" chart-labels="labels">
 </canvas>
