--- a/partials/main.html
+++ b/partials/main.html
@@ -70,7 +70,7 @@
         </thead>
 
         <tbody>
-        <tr ng-repeat="p in playersArray | orderBy:sortType:sortReverse | filter:searchPlayer">
+        <tr ng-repeat="p in $parent.dataCache.playerData | orderBy:sortType:sortReverse | filter:searchPlayer">
             <td><a ng-href="#!/players/{{p.playerId}}">{{ p.lastName}}, {{ p.firstName }}</a></td>
             <td>{{ p.cohort | number}}</td>
             <td>{{ p.stats.games | number }}</td>
