Player detail now filters from TopCtrl

--- a/partials/player-detail.html
+++ b/partials/player-detail.html
@@ -4,7 +4,7 @@
 <h5>Cohort {{player.cohort}}</h5>
 
 <canvas id="radar" class="chart chart-radar"
-  chart-data="data" chart-options="options" chart-colors="colors" chart-labels="labels">
+  chart-data="graphData" chart-options="options" chart-colors="colors" chart-labels="labels">
 </canvas>
 
 </div>
