Player ID tied to game models in controller

--- a/partials/game-report.html
+++ b/partials/game-report.html
@@ -1,19 +1,18 @@
 <div class="container" ng-init="init()" ng-controller="GameReportCtrl">
 
     <button ng-click="
-    showTwoPlayerGameForm = !showTwoPlayerGameForm;
+    showTwoPlayerGameForm = true;
     showFourPlayerGameForm = false;
     showGamePrompt = false;">
     Two Player Game
     </button>
 
     <button ng-click="
-    showFourPlayerGameForm = !showFourPlayerGameForm;
+    showFourPlayerGameForm = true;
     showTwoPlayerGameForm = false;
     showGamePrompt = false">
     Four Player Game
     </button>
-
 
     <div ng-show="showGamePrompt">
         Ask whether it's a two or four player game
@@ -21,12 +20,55 @@
 
     <!-- Two Player Game Form -->
     <div ng-show="showTwoPlayerGameForm">
-        <h1>It's the two player form!</h1>
+        <h4>Player One</h4>
+        <select ng-model="twoPlayerGame.playerOneId">
+        <option>Select a Player</option>
+            <option
+            ng-repeat="p in $parent.dataCache.playerData"
+            value="{{p.playerId}}">{{p.firstName}} {{p.lastName}}
+            </option>
+        </select>
+        <h4>Player Two</h4>
+        <select ng-model="twoPlayerGame.playerTwoId">
+        <option>Select a Player</option>
+            <option
+            ng-repeat="p in $parent.dataCache.playerData"
+            value="{{p.playerId}}">{{p.firstName}} {{p.lastName}}</option>
+        </select>
     </div>
 
     <!-- Four Player Game Form -->
     <div ng-show="showFourPlayerGameForm">
-        <h1>It's the four player form!</h1>
+        <h4>Player One</h4>
+        <select ng-model="fourPlayerGame.playerOneId">
+            <option>Select a Player</option>
+            <option
+            ng-repeat="p in $parent.dataCache.playerData"
+            value="{{p.playerId}}">{{p.firstName}} {{p.lastName}}
+            </option>
+        </select>
+        <h4>Player Two</h4>
+        <select ng-model="fourPlayerGame.playerTwoId">
+        <option>Select a Player</option>
+            <option
+            ng-repeat="p in $parent.dataCache.playerData"
+            value="{{p.playerId}}">{{p.firstName}} {{p.lastName}}</option>
+        </select>
+        <h4>Player Three</h4>
+        <select ng-model="fourPlayerGame.playerThreeId">
+        <option>Select a Player</option>
+            <option
+            ng-repeat="p in $parent.dataCache.playerData"
+            value="{{p.playerId}}">{{p.firstName}} {{p.lastName}}
+            </option>
+        </select>
+        <h4>Player Four</h4>
+        <select ng-model="fourPlayerGame.playerFourId">
+        <option>Select a Player</option>
+            <option
+            ng-repeat="p in $parent.dataCache.playerData"
+            value="{{p.playerId}}">{{p.firstName}} {{p.lastName}}</option>
+        </select>
     </div>
 
 </div>
