Games reported to API. Correct stats returning.

--- a/partials/game-report.html
+++ b/partials/game-report.html
@@ -4,14 +4,14 @@
     showTwoPlayerGameForm = true;
     showFourPlayerGameForm = false;
     showGamePrompt = false;">
-    Two Player Game
+    Singles Game
     </button>
 
     <button ng-click="
     showFourPlayerGameForm = true;
     showTwoPlayerGameForm = false;
     showGamePrompt = false">
-    Four Player Game
+    Doubles Game
     </button>
 
     <div ng-show="showGamePrompt">
@@ -20,6 +20,7 @@
 
     <!-- Two Player Game Form -->
     <div ng-show="showTwoPlayerGameForm">
+
         <h4>Player One</h4>
         <select ng-model="twoPlayerGame.playerOneId">
         <option>Select a Player</option>
@@ -28,6 +29,9 @@
             value="{{p.playerId}}">{{p.firstName}} {{p.lastName}}
             </option>
         </select>
+
+        <input type="number" ng-model="twoPlayerGame.teamOneScore">
+
         <h4>Player Two</h4>
         <select ng-model="twoPlayerGame.playerTwoId">
         <option>Select a Player</option>
@@ -35,10 +39,16 @@
             ng-repeat="p in $parent.dataCache.playerData"
             value="{{p.playerId}}">{{p.firstName}} {{p.lastName}}</option>
         </select>
+
+        <input type="number" ng-model="twoPlayerGame.teamTwoScore">
+
+        <button ng-click="submitScores(twoPlayerGame)">Submit Scores</button>
+
     </div>
 
     <!-- Four Player Game Form -->
     <div ng-show="showFourPlayerGameForm">
+
         <h4>Player One</h4>
         <select ng-model="fourPlayerGame.playerOneId">
             <option>Select a Player</option>
@@ -47,6 +57,7 @@
             value="{{p.playerId}}">{{p.firstName}} {{p.lastName}}
             </option>
         </select>
+
         <h4>Player Two</h4>
         <select ng-model="fourPlayerGame.playerTwoId">
         <option>Select a Player</option>
@@ -54,6 +65,9 @@
             ng-repeat="p in $parent.dataCache.playerData"
             value="{{p.playerId}}">{{p.firstName}} {{p.lastName}}</option>
         </select>
+
+        <input type="number" ng-model="fourPlayerGame.teamOneScore">
+
         <h4>Player Three</h4>
         <select ng-model="fourPlayerGame.playerThreeId">
         <option>Select a Player</option>
@@ -62,6 +76,7 @@
             value="{{p.playerId}}">{{p.firstName}} {{p.lastName}}
             </option>
         </select>
+
         <h4>Player Four</h4>
         <select ng-model="fourPlayerGame.playerFourId">
         <option>Select a Player</option>
@@ -69,6 +84,11 @@
             ng-repeat="p in $parent.dataCache.playerData"
             value="{{p.playerId}}">{{p.firstName}} {{p.lastName}}</option>
         </select>
+
+        <input type="number" ng-model="fourPlayerGame.teamTwoScore">
+
+        <button ng-click="submitScores(fourPlayerGame)">Submit Scores</button>
+
     </div>
 
 </div>
