--- a/scss/style.scss
+++ b/scss/style.scss
@@ -23,3 +23,11 @@ $darker-grey: #464646;
 body {
     margin-top: 60px;
 }
+
+.playerDetailName {
+    color: $color-primary-0
+}
+
+.opponentDetailName {
+    color: $color-secondary-0
+}
