Form tied to scoped variable

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -4,7 +4,8 @@
       <a class="navbar-brand" href="#">NSS Ping Pong Leaderboard</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a ng-href="#!/newplayer">New Player</a></li>
       <li><a ng-href="#!/games/report">Report a Game</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
