--- a/partials/new-player-form.html
+++ b/partials/new-player-form.html
@@ -1,18 +1,48 @@
 <div ng-init="init()">
     <h1>Create a New Player</h1>
-    <form>
-        <div class="form-inline">
-            <label for="firstName">First Name</label>
-            <input type="text" class="form-control" id="firstName" ng-model="newPlayer.firstName">
-            <label for="lastName">Last Name</label>
-            <input type="text" class="form-control" id="lastName" ng-model="newPlayer.lastName">
+
+    <div class="row main">
+        <div class="main-login main-center">
+        <h5>Player Details</h5>
+            <form class="" method="post" action="#">
+                <div class="form-group">
+                    <label for="name" class="cols-sm-2 control-label">Name</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
+                            <input type="text" class="form-control" name="name" id="name" ng-model="newPlayer.firstName" placeholder="First Name"/>
+                            <input type="text" class="form-control" name="name" id="name" ng-model="newPlayer.lastName" placeholder="Last Name"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="email" class="cols-sm-2 control-label">Cohort</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
+                            <input type="number" min="1" max="100" step="1" class="form-control" name="cohort" id="cohort" ng-model="newPlayer.cohort" placeholder="Cohort"/>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="hand" class="cols-sm-2 control-label">Left Handed?</label>
+                    <div class="cols-sm-10">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
+                            <label for="leftTrue"><input type="radio" ng-value="true" ng-model="newPlayer.leftHanded" class="form-control" name="hand" id="leftTrue"/>Yes</label>
+                            <label for="leftFalse"><input type="radio" ng-value="false" ng-model="newPlayer.leftHanded" class="form-control" name="hand" id="leftFalse"/>No</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group ">
+                    <a type="button" ng-click="postNewPlayer()" id="button" class="btn btn-primary btn-lg btn-block login-button">Submit</a>
+                </div>
+
+            </form>
         </div>
-        <div class="form-group">
-            <label for="cohort">Cohort</label>
-            <input type="number" step="1" class="form-control" id="cohort" ng-model="newPlayer.cohort">
-            <label for="hand">Left Handed?</label>
-            <label class="radio-inline"><input type="radio" name="hand" ng-value="true" ng-model="newPlayer.leftHanded">Yes</label>
-            <label class="radio-inline"><input type="radio" name="hand" ng-value="false" ng-model="newPlayer.leftHanded">No</label>
-        </div>
-    </form>
+    </div>
+
 </div>
