--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,30 +39,14 @@ body {
 }
 
 label{
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
-input,
-input::-webkit-input-placeholder {
-    font-size: 11px;
-    padding-top: 3px;
-}
-
-.main-login{
-    background-color: #fff;
-    /* shadows and rounded borders */
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    border-radius: 2px;
-    -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-
-}
 .form-control {
     height: auto!important;
     padding: 8px 12px !important;
 }
+
 .input-group {
     -webkit-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
     -moz-box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.21)!important;
@@ -74,21 +58,32 @@ input::-webkit-input-placeholder {
     margin: 0 auto;
     max-width: 400px;
     padding: 10px 40px;
-    background:#009edf;
-        color: #FFF;
+    background:$color-primary-0;
+    color: #FFF;
     text-shadow: none;
     -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
--moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
-
+    -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
+    box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.31);
 }
+
 span.input-group-addon i {
-    color: #009edf;
+    color: $color-secondary-0;
     font-size: 17px;
+}
+
+.hand-radio-group {
+    background: $color-secondary-0;
+}
+
+.hand-radio-button {
+    padding-top: 10px;
+    padding-left: 30px;
+    display: inline-block;
 }
 
 .login-button{
     margin-top: 5px;
+    background: $color-secondary-0
 }
 
 .login-register{
